k8s/system/cilium/templates/vps-pbr.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: vps-policy-based-routing
  namespace: kube-system
  labels:
    app: vps-pbr
spec:
  selector:
    matchLabels:
      app: vps-pbr
  template:
    metadata:
      labels:
        app: vps-pbr
    spec:
      hostNetwork: true
      tolerations:
        - operator: Exists
      containers:
        - name: setup-routes
          image: alpine:3.23
          securityContext:
            privileged: true
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
