k8s/system/cilium/templates/global-egress-audit-cluster.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: global-egress-audit-cluster
spec:
  log:
    value: audit-cluster
  endpointSelector:
    matchLabels: {}
  egress:
    - toEntities:
        - cluster
