k8s/system/cilium/templates/global-egress-audit-world.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: global-egress-audit-world
spec:
  log:
    value: audit-world
  endpointSelector:
    matchLabels: {}
  egress:
    - toEntities:
        - world
