k8s/system/cilium/templates/global-egress-audit.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: global-egress-audit
spec:
  log:
    value: audit
  endpointSelector:
    matchLabels: {}
  egress:
    - toEntities:
        - world
