k8s/system/cilium/templates/global-egress-baseline.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: global-egress-baseline
spec:
  log:
    value: baseline
  endpointSelector:
    matchLabels: {}
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - cluster
    - toFQDNs:
        - matchPattern: "*"
